--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <% include partials/header %>
-  <h1>Add Customer</h1>
+  <h1>Awesome pipeline</h1>
+  <h3>Add Customer</h3>
   <% if (errors) { %>
     <ul>
     <% errors.map(function (error) { %>
